BcmTVInput: Fix most warnings
There's one non-trivial case where not all UpdateType enums are handles by
a switch statement. It's better to leave it as it is and keep the warning
about missing cases.

refs #SWANDROID-2356

Change-Id: I1cc30a630fb54c55315679db7459381ef7426366
Signed-off-by: Tomek Bury <tomek@broadcom.com>